Update code to solve the whitespace problem in background image

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ html, body{
   background: #fff !important;
   font-weight: 400;
   font-family: sans-serif !important;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
   /* scrollbar-width: none; */
